Set up biorhythms. Build android

--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "@capacitor/android": "2.4.3",
+    "@capacitor/core": "2.4.3",
     "@ionic/react": "^5.0.5",
+    "dayjs": "^1.9.6",
     "ionicons": "^5.0.1",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
+    "@capacitor/cli": "2.4.3",
     "react-scripts": "3.4.1"
   },
   "eslintConfig": {
